Worked on refactoring code

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -29,8 +29,7 @@
     "allowUnreachableCode": false
   },
   "include": [
-    "src/**/*",
-    "migrations/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
