--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,23 @@ dump.rdb
 # Docker
 .dockerignore
 docker-compose.override.yml
+
+# Terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+.terraform.lock.hcl
+terraform.tfvars
+*.auto.tfvars
+*.auto.tfvars.json
+
+# CLI configuration files
+.terraformrc
+terraform.rc
+
+# Backup files
+*.backup
+*.bak
+
+# Project specific
+backups/
