--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,12 +3,10 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Production builds
 dist/
 build/
-TECHNICAL_DOCUMENTATION.md
 
 # Environment variables
 .env
@@ -17,31 +15,12 @@ TECHNICAL_DOCUMENTATION.md
 .env.test.local
 .env.production.local
 
-# TypeScript
-*.tsbuildinfo
-
-# IDE and Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Logs
-logs/
+logs
 *.log
 
 # Runtime data
-pids/
+pids
 *.pid
 *.seed
 *.pid.lock
@@ -50,17 +29,21 @@ pids/
 coverage/
 *.lcov
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# TypeScript cache
+*.tsbuildinfo
 
-# Redis dump
-dump.rdb
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
 
 # Temporary folders
 tmp/
 temp/
-
-# PM2
-.pm2/
