--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Production builds
 dist/
@@ -16,10 +15,21 @@ build/
 .env.test.local
 .env.production.local
 
-# Vite
-.vite/
+# Logs
+logs
+*.log
 
-# TypeScript
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+*.lcov
+
+# TypeScript cache
 *.tsbuildinfo
 
 # IDE and Editor files
@@ -27,24 +37,13 @@ build/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS generated files
 .DS_Store
 .DS_Store?
 ._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Logs
-*.log
-
-# Coverage directory
-coverage/
-*.lcov
-
-# Cache
-.cache/
-.parcel-cache/
+# Temporary folders
+tmp/
+temp/
